--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     </section>
 
     <!-- Testimonials -->
-    <section class="testimonials text-center bg-light">
+    <section class="testimonials text-center bg-light" id="contact">
       <div class="container">
         <h2 class="mb-5">Our Team</h2>
         <div class="row">
