--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               </div>
 
               <h3>Sports</h3>
-              <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+              <p class="lead mb-0">Activities that develop a sense of comraderie</p>
 
             </div>
           </div>
@@ -102,7 +102,7 @@
               </div>
 
               <h3>Technology</h3>
-              <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
+              <p class="lead mb-0">Our facilities provide the tools for making any idea a reality</p>
 
             </div>
           </div>
@@ -113,7 +113,7 @@
               </div>
 
               <h3>Events</h3>
-              <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+              <p class="lead mb-0">Assemble to enjoy Education or Entertainment</p>
             </div>
           </div>
         </div>
@@ -124,7 +124,7 @@
                 <i class="icon-game-controller m-auto text-primary"></i>
               </div>
               <h3>Games</h3>
-              <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+              <p class="lead mb-0">Our take on Classic board games</p>
             </div>
           </div>
           <div class="col-lg-4">
@@ -133,7 +133,7 @@
                 <i class="icon-music-tone m-auto text-primary"></i>
               </div>
               <h3>Music</h3>
-              <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
+              <p class="lead mb-0">Listen, Compose, Perform. It's all here</p>
             </div>
           </div>
           <div class="col-lg-4">
@@ -142,7 +142,7 @@
                 <i class="icon-globe m-auto text-primary"></i>
               </div>
               <h3>Discovery</h3>
-              <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+              <p class="lead mb-0">New ideas, New ways to have fun, New people. Your exploration is always rewarded.</p>
 
             </div>
           </div>
@@ -185,22 +185,29 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-              <h5>Margaret E.</h5>
+              <img class="img-fluid rounded-circle mb-3" src="img/bad-profile-pic-2.jpeg" alt="">
+              <h5>Braxton D.</h5>
               <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-              <h5>Fred S.</h5>
+              <img class="img-fluid rounded-circle mb-3" src="img/bad-profile-pic-2.jpeg" alt="">
+              <h5>Zachary G.</h5>
               <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
-              <h5>Sarah	W.</h5>
+              <img class="img-fluid rounded-circle mb-3" src="img/bad-profile-pic-2.jpeg" alt="">
+              <h5>Apeenan A.</h5>
+              <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
+            </div>
+          </div>
+		  <div class="col-lg-4">
+            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+              <img class="img-fluid rounded-circle mb-3" src="img/bad-profile-pic-2.jpeg" alt="">
+              <h5>Alex E.</h5>
               <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
             </div>
           </div>
