--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-9 mx-auto">
-            <!--<h1 class="mb-5">--><img src="img/reaction-lightning.svg" width="800" height="800"/><!--</h1>-->
+            <!--<h1 class="mb-5">--><img src="img/reaction-logo.png"/><!--</h1>-->
           </div>
           <!--<div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
             <form>
